fix: spacing unit tool

--- a/src/styles/_tools.scss
+++ b/src/styles/_tools.scss
@@ -1,11 +1,3 @@
 @function spacing($n) {
-  $unit: $base-spacing-unit;
-
-  @if $n > 1 {
-    @for $i from 2 through $n {
-      $unit: $unit * 2;
-    }
-  }
-
-  @return $unit;
+  @return $base-spacing-unit * $n;
 }
